--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,17 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/.idea
+
+
+# IDEs and editors
+*.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+.DS_Store
 
 npm-debug.log*
 yarn-debug.log*
