--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "17",
+    "@types/react-dom": "17",
     "axios": "^0.21.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react": "17",
+    "react-dom": "17",
+    "react-scripts": "4.0.3",
     "typescript": "~3.7.2",
     "zustand": "^3.5.7"
   },
