--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "imdb-explorer",
+  "name": "omdb-explorer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@material-ui/core": "^5.0.0-beta.3",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/styles": "^5.0.0-beta.3",
+    "@mui/material": "^5.0.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
